# otter-sql

./: .gitignore  CONTRIBUTOR.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: cargo_docs.md  codegen.rs  column.rs  database.rs  expr.rs  ic.rs  identifier.rs  ir.rs  lib.rs  parser.rs  schema.rs  table.rs  value.rs  vm.rs
src/expr/: agg.rs  eval.rs  mod.rs
