[package]
name = "otter-lite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arraystring = "0.3.0"
sqlparser = "0.18.0"
hashbrown = "0.12.3"

[features]
thread-safe = []

[dev-dependencies]
pretty_assertions = "1.2.1"
