[package]
name = "otter-sql"
version = "0.1.1"
edition = "2021"
rust-version = "1.60"
authors = ["Samyak Sarnayak <samyak201@gmail.com>"]
description = "🦦 An Embeddable SQL Executor"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/otter-sql"
repository = "https://github.com/SeaQL/otter-sql"
keywords = ["sql", "mysql", "sqlite"]
categories = ["database"]

[dependencies]
arraystring = "0.3.0"
sqlparser = "0.18.0"
hashbrown = "0.12.3"
permutation = "0.4.1"
ordered-float = "3.1.0"
tabled = { version = "0.10.0", optional = true }
fmt-derive = "0.0.5"

[features]
default = ["terminal-output"]
terminal-output = ["dep:tabled"]

[dev-dependencies]
pretty_assertions = "1.2.1"
